--- a/examples/stacks/multisig/txtx.yml
+++ b/examples/stacks/multisig/txtx.yml
@@ -10,6 +10,8 @@ runbooks:
   id: namespace-register
   description: Register a BNS namespace
   location: "./namespace-register"
+  state:
+    file: state.json
 environments:
   devnet:
     stacks_network_id: testnet
