--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -21,7 +21,8 @@ serde = "1"
 serde_json = "1"
 serde_derive = "1"
 crossterm = "0.27.0"
-ratatui = { version = "0.26.0-alpha.2", features = ["crossterm"] }
+ratatui = { version = "0.27.0", features = ["crossterm"] }
+ascii_table = "4.0.3"
 itertools = "0.12.0"
 unicode-width = "0.1"
 rust-embed="8.2.0"
