--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -84,7 +84,7 @@ jobs:
           ls txtx-web-ui
 
       - name: Install Rust toolchain
-        run: rustup toolchain install stable --profile minimal --target ${{ matrix.target }}
+        run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
 
       - name: Install Rust Target
         run: rustup target add ${{ matrix.target }}
