--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
     "components/txtx-core",
     "components/txtx-addon-kit",
     "components/txtx-addon-network-bitcoin",
-    "components/txtx-addon-network-stacks"
+    "components/txtx-addon-network-stacks",
+    "components/txtx-lsp"
 ]
 default-members = ["components/txtx-cli"]
 resolver = "2"
