--- a/components/txtx-lsp/Cargo.toml
+++ b/components/txtx-lsp/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0"
 txtx-core = { path = "../txtx-core", default-features = false }
 txtx-addon-network-evm = { path = "../txtx-addon-network-evm", default-features = false }
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks", default-features = false }
+txtx-addon-telegram = { path = "../txtx-addon-telegram" }
 
 # WASM
 console_error_panic_hook = { version = "0.1", optional = true }
