--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -28,6 +28,7 @@ rand = "0.8.5"
 serde_json = "1"
 sha2 = "0.10.8"
 indexmap = { version = "2.2.6", features = ["serde"] } 
+dotenvy_macro = "0.15.7"
 
 [dev-dependencies]
 test-case = "*"
