--- a/.github/workflows/build_ubuntu.yaml
+++ b/.github/workflows/build_ubuntu.yaml
@@ -10,6 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+        name: Login to Quay.io
+        uses: docker/login-action@v2
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_ID }}
+          password: ${{ secrets.QUAY_TOKEN }}
+
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
@@ -60,6 +67,6 @@ jobs:
         run: |
           docker tag txtx:latest quay.io/txtx/txtx:latest
 
-      - name: Push Docker image to Amazon ECR
+      - name: Push Docker image to Quay
         run: |
           docker push quay.io/txtx/txtx:latest
