--- a/.github/workflows/build_ubuntu.yaml
+++ b/.github/workflows/build_ubuntu.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        name: Login to Quay.io
+      - name: Login to Quay.io
         uses: docker/login-action@v2
         with:
           registry: quay.io
