--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,11 @@ members = [
     "components/txtx-cli",
     "components/txtx-core",
     "components/txtx-addon-kit",
-    "components/txtx-addon-network-bitcoin",
-    "components/txtx-addon-network-stacks",
-    "components/txtx-addon-telegram",
-    "components/txtx-lsp"
+    "components/txtx-lsp",
+    "components/addons/bitcoin",
+    "components/addons/evm",
+    "components/addons/stacks",
+    "components/addons/telegram"
 ]
 default-members = ["components/txtx-cli"]
 resolver = "2"
