--- a/components/addons/stacks/Cargo.toml
+++ b/components/addons/stacks/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
+txtx-addon-kit = { path = "../../txtx-addon-kit", default-features = false}
 lazy_static = "1.4.0"
 clarity-repl = { version = "2.0.0", default-features = false }
 clarity-vm = { version = "=2.1.1", default-features = false }
