--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -38,7 +38,8 @@ tokio = "1.37.0"
 mime_guess = "2.0.4"
 serde_yml = "0.0.10"
 dotenvy_macro = "0.15.7"
-tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
+tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
+native-tls = "0.2.11"
 totp-rs = "^5.0"
 base58 = "0.2.0"
 dialoguer = "0.11.0"
