--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-txtx-addon-kit = { path = "../../txtx-addon-kit", default-features = false}
+txtx-addon-kit = { path = "../../components/txtx-addon-kit", default-features = false}
 lazy_static = "1.4.0"
 wasm-bindgen = { version = "=0.2.84", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
