--- a/addons/stacks/Cargo.toml
+++ b/addons/stacks/Cargo.toml
@@ -2,9 +2,10 @@
 name = "txtx-addon-network-stacks"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0"
 
 [dependencies]
-txtx-addon-kit = { path = "../../txtx-addon-kit", default-features = false}
+txtx-addon-kit = { path = "../../components/txtx-addon-kit", default-features = false}
 lazy_static = "1.4.0"
 clarity-repl = { version = "2.0.0", default-features = false }
 clarity-vm = { version = "=2.1.1", default-features = false }
