--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -23,7 +23,7 @@ similar = "2.5.0"
 better-debug = "1.0.1"
 
 [dev-dependencies]
-txtx-addon-network-stacks = { path = "../addons/stacks"}
+txtx-addon-network-stacks = { path = "../../addons/stacks"}
 hiro-system-kit = "0.3.4"
 
 [features]
