--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -137,15 +137,28 @@ jobs:
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
       
       - name: Install dependencies (Linux)
+        if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           sudo apt-get update
           sudo apt-get install musl-tools
+
+      - name: Compile OpenSSL for MUSL
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        run: |
+          wget https://www.openssl.org/source/openssl-1.1.1v.tar.gz
+          tar -xzvf openssl-1.1.1v.tar.gz
+          cd openssl-1.1.1v
+          CC=musl-gcc ./Configure no-shared --prefix=/usr/local/musl no-zlib linux-x86_64
+          make
+          sudo make install
 
       - name: Build - Cargo (Linux)
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           export OPENSSL_STATIC=yes
-          export OPENSSL_DIR=$(pkg-config --variable=libdir openssl)
+          export OPENSSL_DIR=/usr/local/musl
+          export OPENSSL_INCLUDE_DIR=/usr/local/musl/include
+          export OPENSSL_LIB_DIR=/usr/local/musl/lib
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
         
       # Don't compress for Windows because winget can't yet unzip files
