--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -84,20 +84,6 @@ jobs:
           ls txtx
           ls txtx-web-ui
 
-      - name: Install dependencies (Linux)
-        if: matrix.target == 'x86_64-unknown-linux-musl'
-        run: |
-          sudo apt-get update
-          sudo apt-get install musl-tools
-
-      - name: Download prebuilt OpenSSL for MUSL
-        if: matrix.target == 'x86_64-unknown-linux-musl'
-        run: |
-          wget https://musl.libc.org/openssl/musl-openssl-1.1.1.tar.gz
-          tar -xzvf musl-openssl-1.1.1.tar.gz
-          sudo cp -r musl-openssl-1.1.1/include/* /usr/local/musl/include/
-          sudo cp -r musl-openssl-1.1.1/lib/* /usr/local/musl/lib/
-          
       - name: Install Rust toolchain
         run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
 
@@ -150,14 +136,19 @@ jobs:
         run: 
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
       
+      - name: Install dependencies (Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install musl-tools
 
       - name: Build - Cargo (Linux)
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           export OPENSSL_STATIC=yes
-          export OPENSSL_DIR=/usr/local/musl
-          export OPENSSL_INCLUDE_DIR=/usr/local/musl/include
-          export OPENSSL_LIB_DIR=/usr/local/musl/lib
+          export OPENSSL_DIR=$(pkg-config --variable=libdir openssl)
+          export OPENSSL_STATIC=yes
+          export OPENSSL_INCLUDE_DIR=$(pkg-config --variable=libdir openssl)/include
+          export OPENSSL_LIB_DIR=$(pkg-config --variable=libdir openssl)/lib
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
         
       # Don't compress for Windows because winget can't yet unzip files
