--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -140,15 +140,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install musl-tools
+          sudo apt install libssl-dev
 
       - name: Build - Cargo (Linux)
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
-          export OPENSSL_STATIC=yes
-          export OPENSSL_DIR=$(pkg-config --variable=libdir openssl)
-          export OPENSSL_STATIC=yes
-          export OPENSSL_INCLUDE_DIR=$(pkg-config --variable=libdir openssl)/include
-          export OPENSSL_LIB_DIR=$(pkg-config --variable=libdir openssl)/lib
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
         
       # Don't compress for Windows because winget can't yet unzip files
