--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -41,11 +41,14 @@ jobs:
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           echo "HERE $(pkg-config --variable=libdir openssl)"
+          ls /usr/lib/x86_64-linux-musl
+          ls /usr/lib/x86_64-linux-gnu
           sudo apt-get update
           sudo apt-get install musl-tools
           sudo apt install libssl-dev
           echo "HERE $(pkg-config --variable=libdir openssl)"
-          ls /usr/lib
+          ls /usr/lib/x86_64-linux-musl
+          ls /usr/lib/x86_64-linux-gnu
 
 
       - name: Configure git to use LF (Windows)
