--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -150,8 +150,8 @@ jobs:
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           export OPENSSL_STATIC=yes
-          # export OPENSSL_DIR=/usr/lib/x86_64-linux-musl
-          export OPENSSL_DIR=$(pkg-config --variable=libdir openssl)
+          # export OPENSSL_DIR=$(pkg-config --variable=libdir openssl)
+          export OPENSSL_DIR=/usr/lib/x86_64-linux-musl
           export OPENSSL_INCLUDE_DIR="/usr/include/openssl"
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
         
