--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -149,10 +149,10 @@ jobs:
       - name: Build - Cargo (Linux)
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
-          docker run --rm -v $(pwd):/home/rust/src ekidd/rust-musl-builder:latest \
-          sudo chown -R rust:rust /home/rust/.cargo/git /home/rust/.cargo/registry /home/rust/src/target
-          docker run --rm -v $(pwd):/home/rust/src ekidd/rust-musl-builder:latest \
-          cargo build --manifest-path ./txtx/Cargo.toml --release --target ${{ matrix.target }}
+          docker run --rm -v $(pwd)/txtx:/home/rust/src ekidd/rust-musl-builder:latest \
+          sudo chown -R rust:rust /home/rust/src/.cargo/git /home/rust/src/.cargo/registry /home/rust/src/target
+          docker run --rm -v $(pwd)/txtx:/home/rust/src ekidd/rust-musl-builder:latest \
+          cargo build --release --target ${{ matrix.target }}
         
       # Don't compress for Windows because winget can't yet unzip files
       - name: Compress cargo artifact (Linux)
