feat: initializing sp1 addon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "components/txtx-lsp",
     "addons/bitcoin",
     "addons/evm",
+    "addons/sp1",
     "addons/stacks",
     "addons/telegram"
 ]
