chore: update wasm

--- a/addons/sp1/Cargo.toml
+++ b/addons/sp1/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 [dependencies]
 txtx-addon-kit = { path = "../../crates/txtx-addon-kit", default-features = false}
 lazy_static = "1.4.0"
-wasm-bindgen = { version = "=0.2.84", optional = true }
+wasm-bindgen = { version = "=0.2.93", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
+# sp1-sdk = { version = "=1.1.0", default-features = false }
 
 [features]
 default = ["txtx-addon-kit/default"]
