--- a/addons/sp1/Cargo.toml
+++ b/addons/sp1/Cargo.toml
@@ -8,7 +8,7 @@ txtx-addon-kit = { path = "../../crates/txtx-addon-kit", default-features = fals
 lazy_static = "1.4.0"
 wasm-bindgen = { version = "=0.2.93", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
-sp1-sdk = { version = "1.1.1", default-features = false }
+sp1-sdk = { version = "1.1.1", default-features = false, features = ["network"] }
 
 [features]
 default = ["txtx-addon-kit/default"]
