chore: cleaning repo

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ addons/evm/src/tests/fixtures/foundry/out/build-info
 addons/evm/src/tests/fixtures/foundry/cache
 state.json
 addons/sp1/examples/fibonacci-target/program/target
+addons/sp1/examples/fibonacci/program/target
