--- a/addons/sp1/examples/fibonacci/txtx.yml
+++ b/addons/sp1/examples/fibonacci/txtx.yml
@@ -11,6 +11,10 @@ environments:
     stacks_network_id: devnet
     stacks_api_url: http://localhost:3999
     stacks_operator_address: ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
+    sp1_private_key: ""
+    fibonacci_salt: "0x000000000022D473030F116dDEE9F6B43aC78BA3"
+    mnemonic: "model elbow sunny fashion orient nominee symbol odor joy clown range lake"
+    sp1_verifier_address: "0x3B6041173B80E77f038f3F2C0f9744f04837185e"
   testnet:
     stacks_network_id: testnet
     stacks_api_url: https://api.testnet.hiro.so
