--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -10,7 +10,7 @@ categories = { workspace = true }
 [dependencies]
 daggy = "0.8.0"
 base64 = "0.22.1"
-txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
+txtx-addon-kit = { workspace = true, default-features = false}
 getrandom = { version = "0.2", features = ["js"] }
 lazy_static = "1.4.0"
 jaq-interpret = "1.2.1"
