--- a/crates/txtx-gql/Cargo.toml
+++ b/crates/txtx-gql/Cargo.toml
@@ -10,7 +10,7 @@ categories = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-txtx-addon-kit = { path = "../txtx-addon-kit" }
+txtx-addon-kit = { workspace = true }
 futures = { version = "0.3.22", features = ["alloc"], default-features = false }
 futures-enum = { version = "0.1.12", default-features = false }
 uuid = { version = "1.6.1", features = ["serde", "v7"] }
