--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -23,10 +23,29 @@ jobs:
             platform: linux
             target: x86_64-unknown-linux-musl
             architecture: x64
+          # - os: windows-latest
+          #   platform: windows
+          #   target: x86_64-pc-windows-msvc
+          #   architecture: x64
+          - os: macos-latest
+            platform: darwin
+            target: x86_64-apple-darwin
+            architecture: x64
+          - os: macos-latest
+            platform: darwin
+            target: aarch64-apple-darwin
+            architecture: arm64
 
     steps:
 
+      # pre-build for windows
+      - name: Configure git to use LF (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
 
+      # pre-build for all OX
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -62,32 +81,77 @@ jobs:
           npm run build
           cd ..
 
+      # build for linux-musl
       - name: Build-musl
+        if: matrix.os == 'ubuntu-20.04'
         uses: gmiam/rust-musl-action@master
         with:
           args: cargo build --manifest-path ./txtx/Cargo.toml --target ${{ matrix.target }} --release
 
 
-      
+      # set up rust for non linux-musl
+      - name: Install Rust toolchain
+        if: matrix.os != 'ubuntu-20.04'
+        run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
 
+      - name: Install Rust Target
+        if: matrix.os != 'ubuntu-20.04'
+        run: rustup target add ${{ matrix.target }}
+
+      # env vars darwin
+      - name: "Get Rust version (darwin)"
+        if: matrix.os != 'windows-latest' && matrix.ox != 'ubuntu-20.04'
+        run: echo "RUST_VERSION_HASH=$(rustc --version | shasum -a 256 | awk '{print $1}')" >> $GITHUB_ENV
+
+      # env vars windows
+      - name: "Get Rust version (windows)"
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run: echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
+
+      - name: Cache cargo
+        if: matrix.os != 'ubuntu-20.04'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/
+            ./target/${{ matrix.target }}/release/
+          key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock') }}
+
+      # Set environment variables required from cross compiling from macos-x86_64 to macos-arm64
+      - name: Configure macos-arm64 cross compile config
+        if: matrix.target == 'aarch64-apple-darwin'
+        run: |
+          echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
+          echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
+
+      - name: Configure artifact names (not linux-musl)
+        if: matrix.os != 'ubuntu-20.04'
+        shell: bash
+        run: |
+          echo "SHORT_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}" >> $GITHUB_ENV
+          echo "PRE_GYP_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}-unknown" >> $GITHUB_ENV
         
+
+      - name: Build - Cargo (not linux-musl)
+        if: matrix.os != 'ubuntu-20.04'
+        run: 
+          cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
+
       # Don't compress for Windows because winget can't yet unzip files
-      - name: Compress cargo artifact (Linux)
+      - name: Compress cargo artifact (not windows)
         if: matrix.os != 'windows-latest'
         run: tar -C txtx/target/${{ matrix.target }}/release -zcvf txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz txtx
 
-
       # Separate uploads to prevent paths from being preserved
-      - name: Upload cargo artifacts (Linux)
+      - name: Upload cargo artifacts (not windows)
         if: matrix.os != 'windows-latest'
         uses: actions/upload-artifact@v2
         with:
           name: txtx-${{ env.SHORT_TARGET_NAME }}
           path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
 
-
-
-      - name: Upload to S3 (Linux)
+      - name: Upload to S3 (not windows)
         if: matrix.os != 'windows-latest'
         uses: hkusu/s3-upload-action@v2
         id: upload_linux
