--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -1,8 +1,9 @@
-name: CI
+name: Build Binaries
 on:
   push:
     branches:
       - main
+      - improve-ci
   workflow_dispatch:
 
 concurrency:
@@ -10,6 +11,37 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  get_release_info:
+    name: Get Release Info
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.new_release_tag.outputs.TAG }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get latest release
+        if: startsWith(github.ref, 'refs/heads/main')
+        id: release
+        uses: pozetroninc/github-action-get-latest-release@master
+        with:
+          repository: ${{ github.repository }}
+          excludes: prerelease, draft
+
+      - name: Determine if release build
+        if: startsWith(github.ref, 'refs/heads/main')
+        id: new_release_tag
+        env:
+          LATEST_RELEASE: ${{ steps.release.outputs.release }}
+        run: |
+          CARGO_VERSION=v$(grep "version" Cargo.toml | head -n 1 | cut -d\" -f2)
+          if [[ "${CARGO_VERSION}" != "${LATEST_RELEASE}" ]]; then
+            echo "::set-output name=TAG::${CARGO_VERSION}"
+            echo "::warning::Will create release for version: ${CARGO_VERSION}"
+          else
+            echo "::warning::Will not create a release"
+          fi
+
   dist_txtx:
     name: Build Txtx Distributions
     runs-on: ${{ matrix.os }}
@@ -20,9 +52,8 @@ jobs:
         include:
           - os: ubuntu-20.04
             platform: linux
-            target: x86_64-unknown-linux-gnu
+            target: x86_64-unknown-linux-musl
             architecture: x64
-            libc: glibc
           # - os: windows-latest
           #   platform: windows
           #   target: x86_64-pc-windows-msvc
@@ -37,12 +68,15 @@ jobs:
             architecture: arm64
 
     steps:
+
+      # pre-build for windows
       - name: Configure git to use LF (Windows)
         if: matrix.os == 'windows-latest'
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
 
+      # pre-build for all OX
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -78,31 +112,36 @@ jobs:
           npm run build
           cd ..
 
-      - name: List Directories
-        run: |
-          pwd
-          ls txtx
-          ls txtx-web-ui
+      # build for linux-musl
+      - name: Build-musl
+        if: matrix.os == 'ubuntu-20.04'
+        uses: gmiam/rust-musl-action@master
+        with:
+          args: cargo build --manifest-path ./txtx/Cargo.toml --target ${{ matrix.target }} --release
 
+
+      # set up rust for non linux-musl
       - name: Install Rust toolchain
+        if: matrix.os != 'ubuntu-20.04'
         run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
 
       - name: Install Rust Target
+        if: matrix.os != 'ubuntu-20.04'
         run: rustup target add ${{ matrix.target }}
-      
-      - name: List rust targets
-        run: rustup target list
 
-      - name: "Get Rust version (unix)"
-        if: matrix.os != 'windows-latest'
+      # env vars darwin
+      - name: "Get Rust version (darwin)"
+        if: matrix.os != 'windows-latest' && matrix.ox != 'ubuntu-20.04'
         run: echo "RUST_VERSION_HASH=$(rustc --version | shasum -a 256 | awk '{print $1}')" >> $GITHUB_ENV
 
+      # env vars windows
       - name: "Get Rust version (windows)"
         if: matrix.os == 'windows-latest'
         shell: bash
         run: echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
       - name: Cache cargo
+        if: matrix.os != 'ubuntu-20.04'
         uses: actions/cache@v3
         with:
           path: |
@@ -117,52 +156,33 @@ jobs:
           echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
           echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
 
-      - name: Configure artifact names (libc)
-        if: ${{ matrix.libc }}
-        shell: bash
-        run: |
-          echo "SHORT_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}-${{ matrix.libc }}" >> $GITHUB_ENV
-          echo "PRE_GYP_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}-${{ matrix.libc }}" >> $GITHUB_ENV
-
-      - name: Configure artifact names (not libc)
-        if: ${{ ! matrix.libc }}
+      - name: Configure artifact names (not linux-musl)
+        if: matrix.os != 'ubuntu-20.04'
         shell: bash
         run: |
           echo "SHORT_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}" >> $GITHUB_ENV
           echo "PRE_GYP_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}-unknown" >> $GITHUB_ENV
+        
 
-      - name: Build - Cargo
-        if: matrix.target != 'x86_64-unknown-linux-musl'
+      - name: Build - Cargo (not linux-musl)
+        if: matrix.os != 'ubuntu-20.04'
         run: 
           cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
-        
+
       # Don't compress for Windows because winget can't yet unzip files
-      - name: Compress cargo artifact (Linux)
+      - name: Compress cargo artifact (not windows)
         if: matrix.os != 'windows-latest'
         run: tar -C txtx/target/${{ matrix.target }}/release -zcvf txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz txtx
 
-      - name: Compress cargo artifact (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          cd txtx
-          7z a ../txtx-${{ env.SHORT_TARGET_NAME }}.zip target/${{ matrix.target }}/release/txtx
-
       # Separate uploads to prevent paths from being preserved
-      - name: Upload cargo artifacts (Linux)
+      - name: Upload cargo artifacts (not windows)
         if: matrix.os != 'windows-latest'
         uses: actions/upload-artifact@v2
         with:
           name: txtx-${{ env.SHORT_TARGET_NAME }}
           path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
 
-      - name: Upload cargo artifact (Windows)
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-artifact@v2
-        with:
-          name: txtx-${{ env.SHORT_TARGET_NAME }}
-          path: txtx-${{ env.SHORT_TARGET_NAME }}.msi
-
-      - name: Upload to S3 (Linux)
+      - name: Upload to S3 (not windows)
         if: matrix.os != 'windows-latest'
         uses: hkusu/s3-upload-action@v2
         id: upload_linux
@@ -197,3 +217,53 @@ jobs:
       - name: Show URL (Windows)
         if: matrix.os == 'windows-latest'
         run: echo '${{ steps.upload_windows.outputs.file-url }}'
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/heads/main') && needs.get_release_info.outputs.tag != ''
+    needs:
+      - dist_txtx
+      - get_release_info
+    permissions:
+      actions: write
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download pre-built dists
+        uses: actions/download-artifact@v3
+
+      - name: Tag and Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "**/*.tar.gz,**/*.msi"
+          tag: ${{ needs.get_release_info.outputs.tag }}
+          commit: ${{ env.GITHUB_SHA }}
+
+      - name: Set up Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Clone the tap repository
+        run: |
+          git clone https://github.com/txtx/homebrew-txtx.git
+          cd homebrew-txtx
+
+      - name: Update the formula
+        run: |
+          ls
+          cd homebrew-txtx
+          sed -i.bak "s/url \".*\"/url \"https:\/\/github.com\/txtx\/txtx\/releases\/download\/${{ needs.get_release_info.outputs.tag }}\/txtx-${{ needs.get_release_info.outputs.tag }}.tar.gz\"/" Formula/txtx.rb
+          ls
+          sed -i.bak "s/sha256 \".*\"/sha256 \"$(sha256sum path/to/new/release/binary.tar.gz | awk '{ print $1 }')\"/" Formula/txtx.rb
+          rm Formula/txtx.rb.bak
+
+      - name: Commit and push changes
+        run: |
+          cd homebrew-txtx
+          git add Formula/txtx.rb
+          git commit -m "Update to version ${{ needs.get_release_info.outputs.tag }}"
+          git push https://txtx:${{ secrets.GITHUB_TOKEN }}@github.com/txtx/homebrew-txtx.git
