--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -44,6 +44,8 @@ serde_yml = "0.0.10"
 dotenvy_macro = "0.15.7"
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 native-tls = "0.2.11"
+openssl = { version = "*", features = ["vendored"] }
+openssl-sys = { version = "*", features = ["vendored"] }
 totp-rs = "^5.0"
 base58 = "0.2.0"
 dialoguer = "0.11.0"
